--- a/src/app/auth/components/verify-email/verify-email.component.html
+++ b/src/app/auth/components/verify-email/verify-email.component.html
@@ -1,4 +1,4 @@
 <div>
     <input [(ngModel)]="email" placeholder="Enter Email">
-    <button (click)="verifyEmail()">Continue</button>
+    <button (click)="handleVerifyEmail()">Continue</button>
 </div>
